@@ -1,4 +1,4 @@
-# Fityk 0.7.8
+# Fityk 0.9.3
 ## this script is an example of Pawley method for powder pattern in Fityk
 
 # it is very complicated, but there is not simpler method to do it
@@ -8,7 +8,8 @@
 @0 < _EXECUTED_SCRIPT_DIR_/SiC_Zn.dat
 
 # background was obtained by clicking on plot in "background mode"
-Y = y - spline[20.4823,43.3474,  28.004,24.3128,  31.4412,23.6984,  33.7911,36.0138,  38.6477,30.5403,  49.9335,17.263,  65.1888,17.968,  79.5965,22.1979, 98.9835,23.6079](x)
+%bg0 = Spline(20.4823,43.3474,  28.004,24.3128,  31.4412,23.6984,  33.7911,36.0138,  38.6477,30.5403,  49.9335,17.263,  65.1888,17.968,  79.5965,22.1979, 98.9835,23.6079)
+Y = y - %bg0(x)
 
 A = 31 < x < 90 # only data with 2theta greater then 31.0 are active
 
