@@ -2,6 +2,9 @@ $Id$
 
 User-visible changes in version 0.9.3  (2010-0 -  ):
 * changed implementation of gamma and related functions (using boost.math now)
+* syntax: so-called parametrized-functions spline[] and interpolate[]
+  are replaced by so-called variadic functions Spline() and Polyline().
+  The GUI in the Baseline Mode handles a separate baseline for each dataset now.
 
 User-visible changes in version 0.9.2  (2010-05-07):
 * To compile fityk, Boost (only headers) and xylib must be installed first.
